After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784749 - qtdemux: fix debug log for 'hvcC' codec_data
qtdemux: fix debug log for 'hvcC' codec_data
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.12.1
Other Linux
: Normal minor
: 1.12.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-10 13:27 UTC by Florian Zwoch
Modified: 2017-12-02 13:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] qtdemux: fix debug log for 'hvcC' codec_data (928 bytes, patch)
2017-07-10 13:27 UTC, Florian Zwoch
none Details | Review

Description Florian Zwoch 2017-07-10 13:27:39 UTC
Created attachment 355274 [details] [review]
[PATCH] qtdemux: fix debug log for 'hvcC' codec_data

Just a minor thing I have noticed. The debug log for HEVC MP4 files reports a found 'avcC' box while it actually is the HEVC equivalent 'hvcC' box.
Comment 1 Tim-Philipp Müller 2017-12-02 13:47:29 UTC
Nicely spotted, thanks for that patch, and sorry it took so long!

commit b4ca81591cb76045c98ac1061eae0b200a3ea9f9 (HEAD -> master)
Author: Florian Zwoch <fzwoch@gmail.com>
Date:   Mon Jul 10 15:19:34 2017 +0200

    qtdemux: fix debug log for 'hvcC' codec_data
    
    https://bugzilla.gnome.org/show_bug.cgi?id=784749