qtdemux: fix debug log for 'hvcC' codec_data

https://bugzilla.gnome.org/show_bug.cgi?id=784749